v2.0.3 calendar save event amended to new form style.  Fix celander cell style on mobile. Fix cronofy authentication bug.

--- a/MyCalendar.MVC/Content/Site.css
+++ b/MyCalendar.MVC/Content/Site.css
@@ -369,3 +369,7 @@ textarea {
     color: #09c !important;
 }
 
+/*caledar overrides*/
+.fc-more {
+    font-size: x-small !important;
+}
